install.sh -> postinstall.sh

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "1.0.0",
   "description": "FICS proxy which play sounds for chess moves from the intercepted data",
   "scripts": {
-    "postinstall": "./install.sh",
+    "postinstall": "./postinstall.sh",
     "start": "node --harmony index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
