--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "homepage": "https://github.com/tsypa/soundfics#readme",
   "dependencies": {
     "daemon": "^1.1.0",
-    "lodash": "^4.17.4",
-    "winston": "^2.3.1"
+    "lodash.map": "^4.6.0",
+    "lodash.random": "^3.2.0",
+    "winston": "^3.3.3"
   }
 }
